k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: smartbill-wasc
  labels:
    name: smartbill-wasc
    environment: production
